frontend/src/styles.css
html,
body {
  height: 100%;
}
body {
  font-family: Roboto, "Helvetica Neue", sans-serif;
}
.navBar{
    margin: 0px;
}
.body-content {
  margin: 0px 50px;
}
.table-icon-column {
  display: flex;
  flex-wrap: wrap;
  max-width: 100px;
}
.red-text{
  color: rgb(223, 57, 57);
}
.blue-text{
  color: rgb(0, 109, 139);
}
.green-text{
  color: rgb(1, 127, 1);
}
.input-textbox{
  border-radius: 8px;
  border-color: rgb(199, 199, 199);
  background-color: rgb(247, 247, 233);
  padding: .25em;
}
.input-label-modal {
  font-size: 12pt;
  color: #333;
}
.input-textbox-modal {
  width: 100%;
  padding: .5em;
  border: 1px solid #ccc;
  box-sizing: border-box;
}
.form-flex-column {
  display: flex;
  flex-direction: column;
}
.form-group-div{
	margin-bottom: 10px;
}

[formgroupname].ng-invalid.ng-touched.ng-dirty label,
.control:has(.ng-invalid.ng-touched.ng-dirty) label {
  color: #f98b75;
}
[formgroupname].ng-invalid.ng-touched.ng-dirty input,
input.ng-invalid.ng-touched.ng-dirty {
  background-color: #fbdcd6;
  border-color: #f84e2c;
}
.error-label{
	font-size: 10pt;
	color: #f98b75;
	font-weight: bold;
	display: block;
}

